# EvrSim

./: .gitignore  EvrSim.py  EvrSimWx.py  NoteTodo.md  README.md  UpdateLog.md  UpdateLog.txt  est.py
.old/: EvrSimGUI.py  glfw.py  opengl.py
app/EST/: EST.py  __init__.py
app/Editor/: __init__.py
app/EvrSimEditor/: EvrSimEditor.py
app/QTE/: __init__.py  gltoolbar.py  tool.py
app/SmartToeSleeve/: SmartToeSleeve.py  __init__.py  _sim.py  aro.py
app/Welding/: __init__.py  definition.py  depth.py  sim.py  welding.py
blender/: moment.blend
code/cpp/: .clang-format  CMakeLists.txt
code/cpp/inc/: dy_struct.hpp  es_file.hpp  exlist.hpp
code/cpp/src/: dy_struct.cpp  es_file.cpp  exlist.cpp  main.cpp
core/: __init__.py
core/esc/: Acp.py  Aro.py  Map.py  Mdl.py  Mod.py  Model.py  Run.py  Running.py  Sim.py  __init__.py  cls.py  file.py
core/escuda/: __init__.py
core/esevt/: __init__.py
core/esgl/: AroToolPlc.py  __init__.py  aroglc.py  cls.py  detail.py  draw.py  drawpart.py  fs.glsl  gl_div.py  method.py  subthread.py  variable.py  vs.glsl
core/esmdl/: __init__.py  detail.py  node.py  toolbar.py
core/esqt/: __init__.py  base.qss  evt.py  gl.py
core/estab/: __init__.py  detail.py  manager.py
core/estl/: __init__.py  aro_toolbar.py  cmd_div.py  head_div.py  mdl_div.py  msg_div.py  side_div.py  tool_plc.py
core/estool/: __init__.py  aro_toolbar.py  tool_plc.py
cpp/: CMakeLists.txt
cpp/inc/: es_file.h
cpp/src/: es_file.cpp  exlist.cpp  main.cpp
doc/: manual.md
res/: test.py
simcore/: __init__.py
test/: test.py  test2.py
(+165 files in other folders)
